--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
         </div>
         <div class="row     carousel-inner  col-12 col-md-12 col-sm-12  ">
             <div class="carousel-item active    ">
-                <img src="/images/main pic.jpg" class="d-block w-100 col-sm-2 img-fluid  " alt="..." style="height: 39rem;">
+                <img src="images/main pic.jpg" class="d-block w-100 col-sm-2 img-fluid  " alt="..." style="height: 39rem;">
             </div>
             <div class="carousel-item">
-                <img src="/images/main2.webp" class="d-block w-100  img-fluid " alt="..." style="height: 39rem;">
+                <img src="images/main2.webp" class="d-block w-100  img-fluid " alt="..." style="height: 39rem;">
             </div>
             <div class="carousel-item">
-                <img src="/images/main3.webp" class="d-block w-100  img-fluid " alt="..." style="height: 39rem;">
+                <img src="images/main3.webp" class="d-block w-100  img-fluid " alt="..." style="height: 39rem;">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
