--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
     <div class="  cards d-flex  justify-content-lg-center justify-content-center  ">
         <div class="row d-flex     mt-5     ">
         <div class="card p-3   col-12  col-sm-12  col-lg-4   col-md-12   bg-white"><button  class="btn  btn-outline-danger  "  style="width: max-content;"  >DEAL</button>
-            <div class="about-product text-center    mt-2"><img src="/images/FL1.png" width="300em">
+            <div class="about-product text-center    mt-2"><img src="images/FL1.png" width="300em">
                 <div>
                     <h4>2021 ASUS TUF Gaming F15</h4>
                     <h6 class="mt-0 text-black-50">39.62cm(15.6)</h6>
