--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         <div class="card p-3   col-12  col-sm-12  col-lg-4   col-md-12   bg-white"><button  class="btn  btn-outline-danger  "  style="width: max-content;"  >DEAL</button>
             <div class="about-product text-center    mt-2"><img src="images/FL1.png" width="300em">
                 <div>
-                    <h4>2021 ASUS TUF Gaming F15</h4>
+                    <h4>2021 ASUS TUF Gaming F15 (AMD Ryzen 5000 )</h4>
                     <h6 class="mt-0 text-black-50">39.62cm(15.6)</h6>
                     <div class="stars">
                         <i class="text-primary   ri-star-s-fill"></i>
@@ -351,6 +351,7 @@
                         <li>Windows 11 Home</li>
                         <li>Up to GeForce RTX 3060</li>
                         <li>Up to Intel core i9-11900H</li>
+                        <li>120 Hz Refresh Rate</li>
                         <li>Dual 83-Blade Fans Gaming boost 6-pipe Fan</li>
                     </ul>
                 </div>
